2010-07-28  David Reveman  <davidr@novell.com>

	* dirty.cpp:
	* uielement.cpp: Invalidate the parent instead of the
	element itself whenever the change causing the
	invalidation doesn't require the bitmap cache to be
	invalidated.

2010-07-28  David Reveman  <davidr@novell.com>

	* grid.cpp:
	* runtime.cpp:
	* stylus.cpp:
	* uielement.h:
	* uielement.cpp: Have GetCr return NULL for contexts with
	pre-rendered bitmaps and in that way prevent unnecessary
	rendering of cached elements.

	* uielement.h:
	* uielement.cpp: Add initial bitmap cache support.
	New functions InvalidateBitmapCache and InvalidateCacheMode.

	* runtime.h:
	* runtime.cpp: Remove ContextNode::GetTarget.
	Add ContextNode::GetBitmap and ContextNode::SetBitmap.

2010-07-28  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (ComputeActualSize): If available width and
	height are both infinity, then return 0,0 to keep the moon-unit
	DefaultValue tests passing.
	(OnPropertyChanged): If the AspectRatio changes, we need to call
	InvalidateMeasure(). Another fix toward making Seadragon-513 pass.

2010-07-27  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Need to apply transform before
	calling cairo_mask.

	* uielement.cpp: Call GetCr only when necessary.

	* uielement.cpp (PreRender): It should not be necessary to call
	ApplyTransform in PreRender.

2010-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Now that the context is never null we need to make
	sure we return the correct top pointer.

2010-07-27  David Reveman  <davidr@novell.com>

	* src/grid.cpp:
	* src/grid.h:
	* src/runtime.cpp:
	* src/runtime.h:
	* src/stylus.cpp:
	* src/stylus.h:
	* src/uielement.cpp:
	* src/uielement.h: Use Stack instead of List for ContextNodes.

	* list.h:
	* list.cpp: Add simple Stack class.

	* uielement.cpp (PostRender): When possible use
	ContextNode::GetTarget instead of ContextNode::GetCr.

	* runtime.h:
	* runtime.cpp: Add GetTarget method to ContextNode class.
